--- a/AdoptaApp/backend/requirements.txt
+++ b/AdoptaApp/backend/requirements.txt
@@ -1,5 +1,7 @@
 blinker==1.7.0
+certifi==2024.2.2
 click==8.1.7
+cloudinary==1.39.1
 colorama==0.4.6
 Flask==3.0.2
 Flask-Cors==4.0.0
@@ -9,4 +11,6 @@ MarkupSafe==2.1.5
 mysql-connector-python==8.3.0
 python-decouple==3.8
 python-dotenv==1.0.1
+six==1.16.0
+urllib3==2.2.1
 Werkzeug==3.0.2
